--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -1,5 +1,3 @@
-$navigation-height: 60px;
-
 .app {
     overflow: hidden;
     display: grid;
@@ -26,9 +24,10 @@ nav {
     &.view__6--active { left: -500vw; }
 }
 .view {
-    padding: calc( var(--grid-margin) * 3 );
+    padding: calc( #{$grid-margin} * 3 );
     width: 100vw;
     height: 100%;
     overflow-x: hidden;
     overflow-y: scroll;
+    text-align: center;
 }
