--- a/src/components/Players/Player/_Player.scss
+++ b/src/components/Players/Player/_Player.scss
@@ -4,37 +4,45 @@
     flex-flow: row nowrap;
     align-items: center;
     overflow: hidden;
+    text-align: left;
+    background: var(--card-background);
+    border: var(--card-border);
+    border-radius: var(--block-radius);
 }
 .player__image {
     font-size: 0;
+    border-right: none;
     img {
         max-width: 72px;
-        border-radius: var(--block-radius) 0 0 var(--block-radius);
+        // border-radius: var(--block-radius) 0 0 var(--block-radius);
+        -webkit-mask-image: linear-gradient(to left, transparent 25%, black 75%);
+        mask-image: linear-gradient(to left, transparent 25%, black 75%);
+        object-fit: cover;
     }
-    @at-root {
-        .player--purple & { border-right: solid 6px var(--color-purple); }
-        .player--blue & { border-right: solid 6px var(--color-blue); }
-        .player--green & { border-right: solid 6px var(--color-green); }
-        .player--yellow & { border-right: solid 6px var(--color-yellow); }
-        .player--red & { border-right: solid 6px var(--color-red); }
-        .player--black & { border-right: solid 6px var(--color-black); }
-    }
+    // @at-root {
+    //     .player--purple & { border-right: solid 6px hsl( var(--color-purple), 50%, 1);  }
+    //     .player--blue & { border-right: solid 6px hsl( var(--color-blue), 50%, 1); }
+    //     .player--green & { border-right: solid 6px hsl( var(--color-green), 50%, 1); }
+    //     .player--yellow & { border-right: solid 6px hsl( var(--color-yellow), 50%, 1); }
+    //     .player--red & { border-right: solid 6px hsl( var(--color-red), 50%, 1); }
+    //     .player--black & { border-right: solid 6px hsl( var(--color-black), 50%, 1); }
+    // }
 }
 .player__content {
     width: 100%;
-    height: 72px;
+    // height: 72px;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
-    border-radius: 0 var(--block-radius) var(--block-radius) 0;
-    padding: var(--card-padding);
-    border: var(--card-border);
-    border-left: none;
-    background: var(--card-background);
+    // border-radius: 0 var(--block-radius) var(--block-radius) 0;
+    padding: $card-padding;
+    // border: var(--card-border);
+    // border-left: none;
+    
 }
 .player__info {
-    margin-right: var(--card-padding);
+    margin-right: $card-padding;
     h2, p {
         margin: 0;
     }
