--- a/src/components/Players/_PlayerContainer.scss
+++ b/src/components/Players/_PlayerContainer.scss
@@ -1,5 +1,5 @@
 .players__list {
-    margin-bottom: var(--grid-margin);
+    margin-bottom: $paragraph-margin;
     @media (max-width: 760px) {
         flex-flow: row wrap;
     }
