--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 // Global
 @import "styles/_normalize.scss";
 
+@import "styles/_colors.scss";
 @import "styles/_variables.scss";
 @import "styles/_mixins.scss";
 
