--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -1,11 +1,11 @@
 // Button Base
 @mixin button {
-    font-family: $secondary-font;
+    font-family: var(--secondary-font);
     font-weight: 700;
     font-size: $p-font-size;
     border-radius: var(--ui-radius);
     color: #fff;
-    background: var(--neutral-color);
+    background: hsl( var(--color-neutral), 50%, 1);
     cursor: pointer;
     line-height: 1;
     padding: 0.5em 1em;
@@ -14,6 +14,7 @@
     &[disabled] {
         opacity: 0.25;
     }
+    &:hover { background: hsl( var(--color-neutral), 56%, 1); }
 }
 
 // Button Sizes
@@ -23,11 +24,11 @@
 }
 @mixin button-md {
     @include button;
-    font-size: calc(#{$p-font-size}*0.85)
+    font-size: calc( #{$p-font-size} * 0.85)
 }
 @mixin button-sm {
     @include button;
-    font-size: calc(#{$p-font-size}*0.7)
+    font-size: calc( #{$p-font-size} * 0.7)
 }
 .button-lg {@include button-lg;}
 .button-md {@include button-md;}
@@ -36,25 +37,25 @@
 
 // Button Colors
 @mixin primary-button {
-    background: var(--color-orange);
-    &:hover { background: var(--color-orange-d); }
+    background: hsl( var(--color-orange), 50%, 1);
+    &:hover { background: hsl( var(--color-orange), 56%, 1); }
 }
 @mixin neutral-dark-button {
-    background: $neutral-color-ddd;
-    &:hover { background: $neutral-color-ddddd; }
+    background: hsl( var(--color-neutral), 12%, 1);
+    &:hover { background: hsl( var(--color-neutral), 18%, 1); }
 }
 @mixin neutral-light-button {
-    background: $neutral-color-lll;
-    color: $neutral-color-ddd;
-    &:hover { background: $neutral-color-l; }
+    background: hsl( var(--color-neutral), 70%, 1);
+    color: hsl( var(--color-neutral), 16%, 1);
+    &:hover { background: hsl( var(--color-neutral), 64%, 1); }
 }
 @mixin affirm-button {
-    background: $affirm-color;
-    &:hover { background: $affirm-color-d; }
+    background: hsl( var(--color-affirm), 50%, 1);
+    &:hover { background: hsl( var(--color-affirm), 56%, 1); }
 }
 @mixin negate-button {
-    background: $negate-color;
-    &:hover { background: $negate-color-d; }
+    background: hsl( var(--color-negate), 50%, 1);
+    &:hover { background: hsl( var(--color-neutral), 56%, 1); }
 }
 .primary-button { @include primary-button; }
 .neutral-dark-button { @include neutral-dark-button; }
