--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -1,3 +1,16 @@
+* {
+    -ms-overflow-style: none;  // IE 10+
+    overflow: -moz-scrollbars-none;  // Firefox
+    &::-webkit-scrollbar {
+        width: 0px;  /* remove scrollbar space */
+        background: transparent;  /* optional: just make scrollbar invisible */
+        display: none;  // Safari and Chrome
+    }
+    /* optional: show position indicator in red */
+    &::-webkit-scrollbar-thumb {
+        background: #FF0000;
+    }
+}
 .app {
     overflow: hidden;
     display: grid;
