--- a/src/components/Navigation/_Navigation.scss
+++ b/src/components/Navigation/_Navigation.scss
@@ -1,4 +1,7 @@
 nav {
+    @media (min-width: 768px ) {
+        justify-self: center;
+    }
     ul {
         // display: flex;
         // flex-flow: row nowrap;
@@ -12,6 +15,7 @@ nav {
         grid-template-rows: $navigation-height;
         grid-auto-columns: 1fr;
         grid-auto-flow: column;
+        
     }
     button, a {
         display: block;
@@ -19,7 +23,6 @@ nav {
         background: blue;
         text-decoration: none;
         font-size: 0.8em;
-        // width: 120px;
         width: 100%;
         height: $navigation-height;
         position: relative;
@@ -35,6 +38,9 @@ nav {
         }
         p {
             margin: 0;
+        }
+        @media (min-width: 768px ) {
+            width: 100px;
         }
     }
     .nav__label {
