--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -13,4 +13,6 @@ input[type] {
     border: none;
     outline: none;
     padding: calc( #{$paragraph-margin} * 0.5);
+    font-family: var(--primary-font);
+    font-weight: 700;
 }
