--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -19,6 +19,8 @@ h1, h2, h3, h4, h5, h6, p {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--secondary-font);
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
 }
 
 h1 {
