--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -8,12 +8,12 @@
     font-style: normal;
 }
 
-h1, h2, h3, h4, h5, h6, p, label {
+h1, h2, h3, h4, h5, h6, p, label, span {
     @include font-smoothing;
     color: hsl( var(--color-neutral), 100%, 1);
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, span {
     margin: 0 0 $paragraph-margin;
 }
 
