--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -21,12 +21,42 @@ body {
 	width: calc(100% - 4em);
 }
 .card {
-	// background: hsl( var(--color-blue), 50%, 0.1);;
-	// border: solid 1px rgba($color-blue,0.5);
 	background: var(--card-background);
 	border: var(--card-border);
 	border-radius: var(--block-radius);
 	padding: $card-padding;
+	&.card--red {
+		border: solid 1px hsl( var(--color-red), 50%, 0.5);
+    	background: hsl( var(--color-red), 50%, 0.15);
+	}
+	&.card--orange {
+		border: solid 1px hsl( var(--color-orange), 50%, 0.5);
+    	background: hsl( var(--color-orange), 50%, 0.15);
+	}
+	&.card--yellow {
+		border: solid 1px hsl( var(--color-yellow), 50%, 0.5);
+    	background: hsl( var(--color-yellow), 50%, 0.15);
+	}
+	&.card--green {
+		border: solid 1px hsl( var(--color-green), 50%, 0.5);
+    	background: hsl( var(--color-green), 50%, 0.15);
+	}
+	&.card--teal {
+		border: solid 1px hsl( var(--color-teal), 50%, 0.5);
+    	background: hsl( var(--color-teal), 50%, 0.15);
+	}
+	&.card--blue {
+		border: solid 1px hsl( var(--color-blue), 50%, 0.5);
+    	background: hsl( var(--color-blue), 50%, 0.15);
+	}
+	&.card--navy {
+		border: solid 1px hsl( var(--color-navy), 50%, 0.5);
+    	background: hsl( var(--color-navy), 50%, 0.15);
+	}
+	&.card--purple {
+		border: solid 1px hsl( var(--color-purple), 50%, 0.5);
+    	background: hsl( var(--color-purple), 50%, 0.15);
+	}
 }
 
 .modal-container {
