start round logic

--- a/src/components/Players/Player/_Player.scss
+++ b/src/components/Players/Player/_Player.scss
@@ -22,7 +22,7 @@
             cursor: pointer;
         }
     }
-    @media (min-width: $mobile-size ) {
+    @media (min-width: $tablet-size ) {
         button {
             display: none;
         }
