--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -10,6 +10,7 @@
     line-height: 1;
     padding: 0.5em 1em;
     text-transform: uppercase;
+    box-sizing: border-box;
     @include font-smoothing;
     &[disabled] {
         opacity: 0.25;
