--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,8 @@
 $grid-margin:           calc(0.25em + 0.25vw);
 
 // Breakpoints
-$mobile-size:           1024px;    
+$mobile-size:           600px;   
+$tablet-size:           1024px;    
 
 // Interface
 $card-padding:          calc(0.5em + 0.5vw);
