--- a/src/components/Round/_RoundContainer.scss
+++ b/src/components/Round/_RoundContainer.scss
@@ -1,8 +1,26 @@
-.strategies {
+.round {
+    height: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: center;
+    justify-content: center;
+    & > * {
+        flex-basis: 100%;
+    }
+}
+
+.round-strats {
+    text-align: left;
+    margin-bottom: calc( #{$grid-margin} * 6);
+    h2 {
+        margin-bottom: 0.5em;
+    }
+}
+
+.round-strats__list {
     flex-flow: row wrap;
     justify-content: center;
     .card {
-        // flex-basis: 42%;
         flex-basis: calc( 50% - (#{$grid-margin} * 2) );
         margin-bottom: $grid-margin;
         padding: 0;
@@ -12,68 +30,36 @@
         @media (min-width: $mobile-size) {
             flex-basis: calc( 25% - (#{$grid-margin} * 2) );
         }
+        &:hover {
+            cursor: pointer;
+        }
+        h3 {
+            font-size: calc(0.5em + 0.5vw);
+            margin: 0;
+        }
     }
-    h2 {
-        font-size: calc(0.5em + 0.5vw);
-        // font-family: var(--primary-font);
-        // text-transform: none;
-        // letter-spacing: 0;
-        // margin-bottom: 1em;
-        margin: 0;
-    }
+    
     .strategy__number {
         margin: 0;
         font-size: calc(0.75em + 0.5vw);
         font-family: var(--secondary-font);
         font-weight: 700;
         padding: $card-padding;
-        // border-right: solid 1px #fff;
     }
 }
 
 .strategy__players {
-    // display: flex;
-    // flex-flow: row wrap;
-    // justify-content: center;
     button {
         display: block;
         width: 100%;
         margin-top: 0.5em;
     }
-    // button {
-    //     margin: 0.25em;
-    //     display: block;
-    //     padding: 0.5em 1em;
-    //     border-radius: var(--ui-radius);
-    //     background: hsl( var(--color-neutral), 50%, 0.8);
-    //     color: hsl( var(--color-neutral), 100%, 1);
-    //     font-family: var(--primary-font);
-    //     &:hover {
-    //         cursor: pointer;
-    //     }
-    // }
 }
 
-.droppable {
-    // background: #555;
-    // width: 250px;
-    min-height: 7em;
-    // margin: 32px;
-    padding: $card-padding;
-    margin: 2em;
-    & > * {
-        background: #fff;
-        padding: 12px;
-        border-radius: 3px;
-        margin: 12px;
-        &:hover {
-            cursor: pointer;
-        }
-        &:active {
-            cursor: grab;
-        }
-    }
-    &:hover > *:active {
-        opacity:0.5;
-    } 
+.dropzone {
+    min-height: 100px;
+    min-width: 100px;
+    background: rgba(0,0,0,0.25);
+    border: dashed 2px rgba(0,0,0,0.75);
+    border-radius: var(--block-radius);
 }
